adicionei um paragrafo

--- a/Site-exemplo/index.html
+++ b/Site-exemplo/index.html
@@ -10,5 +10,6 @@
     <hr>
         <p>Este é o meu primeiro site em um repositório Git.</p>
     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, animi. Illum sequi possimus accusantium, at quaerat magni quis dolores qui, sit veritatis, harum maiores enim. Vitae expedita dignissimos sit architecto.</p>
+    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, animi. Illum sequi possimus accusantium, at quaerat magni quis dolores qui, sit veritatis, harum maiores enim. Vitae expedita dignissimos sit architecto.</p>
 </body>
 </html>
